src/test/05-Global/101.txt
101.ck:9:5: error: global Event 'e' has different type 'myEvent' than already existing global Event of the same name
[9]     global myEvent e;
        ^
